fixat z-index problem i sticky header och lagt till styles för expanderad rad.

--- a/projects/komponentkartan/src/assets/partials/_components.grid.scss
+++ b/projects/komponentkartan/src/assets/partials/_components.grid.scss
@@ -19,7 +19,7 @@ vgr-grid {
       min-height: 36px;
       min-width: 0px;
 
-      > div {
+      >div {
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
@@ -31,18 +31,29 @@ vgr-grid {
   .grid-header-expandable {
     vgr-grid-column:last-child {
       position: relative;
+
       &:after {
+        z-index: 0;
         content: "";
-        background: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='chevron-down' class='svg-inline--fa fa-chevron-down fa-w-14 fa-sm' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='currentColor' d='M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z'%3E%3C/path%3E%3C/svg%3E")
-          center center no-repeat;
+        background: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='chevron-down' class='svg-inline--fa fa-chevron-down fa-w-14 fa-sm' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='currentColor' d='M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z'%3E%3C/path%3E%3C/svg%3E") center center no-repeat;
         width: 15px;
         height: 15px;
         display: block;
         position: absolute;
-        right: 8px;
+        right: 10px;
         top: 12px;
         transition: transform 0.4s;
       }
+    }
+  }
+
+  vgr-grid-row {
+    display: block;
+    transition: margin 0.4s, box-shadow 0.4s;
+    &.grid-row-expanded {
+      box-shadow: 3px 3px 9px 0 rgba(0, 0, 0, .5);
+      margin-top: 14px;
+      margin-bottom: 14px;
     }
   }
 
@@ -52,12 +63,15 @@ vgr-grid {
     }
   }
 
-  .grid-header {
-    // margin-top: 10px;
-    // position: sticky;
-    // top: 79px;
-  }
   .grid-header--sticky {
+    z-index: 2;
     position: sticky;
+  }
+}
+
+
+@media screen and (min-width: $desktop-width--medium) {
+  vgr-grid {
+    max-width: 1170px;
   }
 }
